[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/Audiowide/Audiowide-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Lobster/Lobster-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/pixel-takhisis-font/PixelTakhisis-ZajJ.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Info.gd" type="Script" id=4]
[ext_resource path="res://PowrUps/2x.png" type="Texture" id=5]
[ext_resource path="res://PowrUps/freeze.png" type="Texture" id=6]
[ext_resource path="res://PowrUps/shield.png" type="Texture" id=7]
[ext_resource path="res://PowrUps/invincibility.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 1, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 1

[sub_resource type="Theme" id=10]
Label/colors/font_color = Color( 0.996078, 0.0117647, 0.0117647, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 8 )
Label/styles/normal = null
Panel/styles/panel = SubResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 14
font_data = ExtResource( 1 )

[node name="Info" type="ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.420441
margin_bottom = 0.420441
color = Color( 0.85098, 1, 0, 0.745098 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header2" type="Label" parent="Control"]
anchor_right = 1.0
margin_top = -17.0
margin_right = 34.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.00784314, 0, 1, 1 )
text = "Info"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 120.0
margin_top = 7.0
margin_right = 160.0
margin_bottom = 21.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control/RichTextLabel"]
margin_left = 5.0
margin_top = 3.0
margin_right = 58.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
disabled = true
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="Control/RichTextLabel"]

[node name="Panel" type="Panel" parent="Control/RichTextLabel/Node2D"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 31.0
margin_right = 305.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Sprite" parent="Control/RichTextLabel/Node2D/Panel"]
position = Vector2( 31.5764, 23.1434 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 5 )

[node name="Label2" type="Label" parent="Control/RichTextLabel/Node2D/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 8.0
margin_right = -12.0
margin_bottom = -13.0
text = "For one level the score will be doubled"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Control/RichTextLabel/Node2D"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 87.0
margin_right = 305.0
margin_bottom = 138.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Sprite" parent="Control/RichTextLabel/Node2D/Panel2"]
position = Vector2( 31.5764, 23.1434 )
scale = Vector2( 0.025, 0.025 )
texture = ExtResource( 6 )

[node name="Label2" type="Label" parent="Control/RichTextLabel/Node2D/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 6.0
margin_right = -12.0
margin_bottom = -4.0
text = "For 30 second everything in the game freezes"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="Control/RichTextLabel/Node2D"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 143.0
margin_right = 305.0
margin_bottom = 194.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Sprite" parent="Control/RichTextLabel/Node2D/Panel3"]
position = Vector2( 31.5764, 23.1434 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )

[node name="Label2" type="Label" parent="Control/RichTextLabel/Node2D/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 6.0
margin_right = -12.0
margin_bottom = -4.0
text = "For one level your armor does not break"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="Control/RichTextLabel/Node2D"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 200.0
margin_right = 305.0
margin_bottom = 251.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Sprite" parent="Control/RichTextLabel/Node2D/Panel4"]
position = Vector2( 31.5764, 23.1434 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 8 )

[node name="Label2" type="Label" parent="Control/RichTextLabel/Node2D/Panel4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 8.0
margin_right = -12.0
margin_bottom = -13.0
text = "For 30 second no one can hurt you"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="Control/RichTextLabel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 90.0
page = 10.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Control/RichTextLabel/Button" to="." method="_on_Button_button_up"]
[connection signal="scrolling" from="Control/RichTextLabel/VScrollBar2" to="." method="_on_VScrollBar2_scrolling"]
